--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,7 +45,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --skip-pypy
+          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
@@ -76,7 +76,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --skip-pypy
+          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -104,7 +104,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --skip-pypy
+          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -130,7 +130,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --skip-pypy
+          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
