--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,17 +24,17 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: x86_64
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: x86
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: aarch64
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: armv7
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: s390x
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: ppc64le
     steps:
       - uses: actions/checkout@v4
@@ -45,7 +45,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
+          args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
@@ -59,13 +59,13 @@ jobs:
     strategy:
       matrix:
         platform:
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: x86_64
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: x86
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: aarch64
-          - runner: ubuntu-22.04
+          - runner: ubuntu-20.04
             target: armv7
     steps:
       - uses: actions/checkout@v4
@@ -76,7 +76,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
+          args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -104,7 +104,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
+          args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -130,7 +130,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --exclude pypy3.7 --exclude pypy3.8 --exclude pypy3.9 --exclude pypy3.10 --exclude pypy3.11
+          args: --release --out dist --find-interpreter
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
       - name: Upload wheels
         uses: actions/upload-artifact@v4
