--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -37,7 +37,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter --interpreter python3.7 python3.8 python3.9 python3.10 python3.11 python3.12 pypy3.9 pypy3.10
+          args: --release --out dist --interpreter python3.8 python3.9 python3.10 python3.11 python3.12 pypy3.9 pypy3.10
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: auto
       - name: Upload wheels
