--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "up-py"
-version = "0.1.0"
+name = "up-py-rs"
+version = "0.0.3"
 edition = "2024"
+description = "It provides UProtocol binding to use in Python. It is built using Maturin and Pyo3"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "up_py"
+name = "up_py_rs"
 crate-type = ["cdylib"]
 
 [dependencies]
